# CareBridge

./: .gitignore  CareBridge_Certification_Challenge.ipynb  Procfile  README.md  Written_Document_Personal_Health_Copilot.md  pyproject.toml  vercel.json
api/: README.md  app.py  requirements.txt
backend/: __init__.py  app.py  requirements.txt
backend/api/: index.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/api/: index.py
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/api_disabled/auth/[...nextauth]/: route.ts
frontend/src/app/org/: layout.tsx
frontend/src/app/org/patient/: page.tsx
frontend/src/app/org/provider/: page.tsx
frontend/src/lib/: api.ts
